--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sell Your Item</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Selling</title>
+    <link rel="stylesheet" href="Selling.css">
 </head>
 <body>
     <!-- Navigation -->
     <nav class="nv">
-        <div class="logo"><a href="#"><img src="Images/images/logo.jpg.png" alt="Logo"></a></div>
+        <div class="logo"><a href="#"><img src="logo3.png" alt="Logo"></a></div>
         <div class="nav-links">
             <ul>
-                <li><a href="#">HOME</a></li>
-                <li><a href="#abt">ABOUT US</a></li>
-                <li><a href="#selling">SELLING</a></li>
-                <li><a href="#buying">BUYING</a></li>
-                <li><a href="#rental">RENTAL</a></li>
+                <li><a href="ResourceHive.html">HOME</a></li>
+                <li><a href="ResourceHive.html">ABOUT US</a></li>
+                <li><a href="Selling.html">SELLING</a></li>
+                <li><a href="Buying.html">BUYING</a></li>
+                <li><a href="Rental.html">RENTAL</a></li>
             </ul>
         </div>
     </nav>
