--- a/Buying.html
+++ b/Buying.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Resource Hive Login</title>
+    <title>BUYING</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="Buying.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -13,14 +13,14 @@
 <body>
     <div class="container">
       <nav class="nv">
-          <div class="logo"><a href="#"><img src="./Images/photo_6253284470023111456_y-removebg-preview.png" alt="Logo"></a></div>
+          <div class="logo"><a href="#"><img src="Images/photo_6253284470023111456_y-removebg-preview.png" alt="Logo"></a></div>
           <div class="nav-links">
               <ul>
-                  <li><a href="#">HOME</a></li>
-                  <li><a href="#abt">ABOUT US</a></li>
-                  <li><a href="#selling">SELLING</a></li>
-                  <li><a href="#buying">BUYING</a></li>
-                  <li><a href="#rental">RENTAL</a></li>
+                  <li><a href="ResourceHive.html">HOME</a></li>
+                  <li><a href="ResourceHive.html">ABOUT US</a></li>
+                  <li><a href="Selling.html">SELLING</a></li>
+                  <li><a href="Buying.html">BUYING</a></li>
+                  <li><a href="Rental.html">RENTAL</a></li>
               </ul>
           </div>
       </nav>        
@@ -35,7 +35,7 @@
         <div class="items">
             <div class="item">
                 <div class="pic">
-                    <img src="./Images/casio-fx-991.jpg" alt="Scientific Calculator">
+                    <img src="Images/casio-fx-991.jpg" alt="Scientific Calculator">
                 </div>
                 <div class="information">
                   <h2>Scientific Calculator</h2>
@@ -49,7 +49,7 @@
             </div>
             <div class="item">
                 <div class="pic">
-                    <img src="./Images/Aurdino.webp" alt="Arduino UNO">
+                    <img src="Images/Aurdino.webp" alt="Arduino UNO">
                 </div>
                 <div class="information">
                     <h2>Arduino UNO</h2>
@@ -64,7 +64,7 @@
             </div>
             <div class="item">
                 <div class="pic">
-                    <img src="./Images/Digital Electronics.webp" alt="Digital Electronics by Anand Kumar">
+                    <img src="Images/Digital Electronics.webp" alt="Digital Electronics by Anand Kumar">
                 </div>
                 <div class="information">
                     <h2>Digital Electronics by Anand Kumar</h2>
@@ -79,7 +79,7 @@
             </div>
             <div class="item">
                 <div class="pic">
-                    <img src="./Images/buds.jpg" alt="OnePlus Buds 2">
+                    <img src="Images/buds.jpg" alt="OnePlus Buds 2">
                 </div>
                 <div class="information">
                     <h2>OnePlus Buds 2</h2>
