--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="logo"><a href="ResourceHive.html" alt=""><img src="logo3.png"></a></div>
         <div class="nav-links">
           <ul>
-            <li><a href="ResourceHive.html">HOME</a></li>
+            <li><a href="index.html">HOME</a></li>
             <li><a href="#abt"><pre>ABOUT  US</pre></a></li>
             <li><a href="Selling.html">SELLING</a></li>
             <li><a href="Buying.html">BUYING</a></li>
@@ -83,7 +83,7 @@
   </div>
   <div class="footerNav">
     <ul>
-      <li><a href="ResourceHive.html">Home</a></li>
+      <li><a href="index.html">Home</a></li>
       <li><a href="#abt">About  Us</a></li>
       <li><a href="Buying.html">Buying</a></li>
       <li><a href="Selling.html">Selling</a></li>
