--- a/Buying.html
+++ b/Buying.html
@@ -16,7 +16,7 @@
           <div class="logo"><a href="#"><img src="logo3.png" alt="Logo"></a></div>
           <div class="nav-links">
               <ul>
-                  <li><a href="ResourceHive.html">HOME</a></li>
+                  <li><a href="index.html">HOME</a></li>
                   <li><a href="ResourceHive.html">ABOUT US</a></li>
                   <li><a href="Selling.html">SELLING</a></li>
                   <li><a href="Buying.html">BUYING</a></li>
