making some minor changes

--- a/Form.html
+++ b/Form.html
@@ -29,7 +29,7 @@
 
             <p><input type="checkbox">Remember Me <a href="#">Forget Password</a></p>
 
-            <input id="btn" type="submit" value="Login">
+            <input id="btn" type="submit" value="Login" onclick="location.href='Buying.html'; return false;">
 
             <p>Don't have a account? <a href="#">Register</a></p>
 
