--- a/Rental.html
+++ b/Rental.html
@@ -13,14 +13,14 @@
 <body>
     <div class="container">
       <nav class="nv">
-          <div class="logo"><a href="#"><img src="logo3.png" alt="Logo"></a></div>
+          <div class="logo"><a href="#"><img src="Images/photo_6253284470023111456_y-removebg-preview.png" alt="Logo"></a></div>
           <div class="nav-links">
               <ul>
-                  <li><a href="ResourceHive.html">HOME</a></li>
-                  <li><a href="ResourceHive.html" target="#abt">ABOUT US</a></li>
-                  <li><a href="Selling.html">SELLING</a></li>
-                  <li><a href="Buying.html">BUYING</a></li>
-                  <li><a href="Rental.html">RENTAL</a></li>
+                  <li><a href="index.html">HOME</a></li>
+                  <li><a href="index.html" target="#abt">ABOUT US</a></li>
+                  <li><a href="selling.html">SELL</a></li>
+                  <li><a href="Buying.html">BUY</a></li>
+                  <li><a href="Rental.html">RENT</a></li>
               </ul>
           </div>
       </nav>        
@@ -35,7 +35,7 @@
         <div class="items">
             <div class="item">
                 <div class="pic">
-                    <img src="casio-fx-991.jpg" alt="Scientific Calculator">
+                    <img src="Images/casio-fx-991.jpg" alt="Scientific Calculator">
                 </div>
                 <div class="information">
                   <h2>Scientific Calculator</h2>
@@ -49,7 +49,7 @@
             </div>
             <div class="item">
                 <div class="pic">
-                    <img src="Aurdino.webp" alt="Arduino UNO">
+                    <img src="Images/Aurdino.webp" alt="Arduino UNO">
                 </div>
                 <div class="information">
                     <h2>Arduino UNO</h2>
@@ -64,7 +64,7 @@
             </div>
             <div class="item">
                 <div class="pic">
-                    <img src="Digital Electronics.webp" alt="Digital Electronics by Anand Kumar">
+                    <img src="Images/Digital Electronics.webp" alt="Digital Electronics by Anand Kumar">
                 </div>
                 <div class="information">
                     <h2>Digital Electronics by Anand Kumar</h2>
@@ -79,7 +79,7 @@
             </div>
             <div class="item">
                 <div class="pic">
-                    <img src="buds.jpg" alt="OnePlus Buds 2">
+                    <img src="Images/buds.jpg" alt="OnePlus Buds 2">
                 </div>
                 <div class="information">
                     <h2>OnePlus Buds 2</h2>
