--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
     <!--Landing Part-->
     <section class="header">
       <nav class="nv">
-        <div class="logo"><a href="ResourceHive.html" alt=""><img src="Images/photo_6253284470023111456_y-removebg-preview.png"></a></div>
+        <div class="logo"><a href="index.html" alt="Resource Hive"><img src="Images/photo_6253284470023111456_y-removebg-preview.png" alt="Resource Hive Logo"></a></div>
         <div class="nav-links">
           <ul>
-            <li><a href="ResourceHive.html">HOME</a></li>
+            <li><a href="index.html">HOME</a></li>
             <li><a href="#abt"><pre>ABOUT  US</pre></a></li>
-            <li><a href="Selling.html">SELLING</a></li>
-            <li><a href="Buying.html">BUYING</a></li>
-            <li><a href="Rental.html">RENTAL</a></li>
+            <li><a href="selling.html">SELL</a></li>
+            <li><a href="Buying.html">BUY</a></li>
+            <li><a href="Rental.html">RENT</a></li>
           </ul>
         </div>
       </nav>
@@ -83,11 +83,11 @@
   </div>
   <div class="footerNav">
     <ul>
-      <li><a href="ResourceHive.html">Home</a></li>
+      <li><a href="index.html">Home</a></li>
       <li><a href="#abt">About  Us</a></li>
-      <li><a href="Buying.html">Buying</a></li>
-      <li><a href="Selling.html">Selling</a></li>
-      <li><a href="Rental.html">Rental</a></li>
+      <li><a href="Buying.html">Buy</a></li>
+      <li><a href="selling.html">Sell</a></li>
+      <li><a href="Rental.html">Rent</a></li>
     </ul>
   </div>
   <div class="footerBottom">
