--- a/selling.html
+++ b/selling.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Selling</title>
-    <link rel="stylesheet" href="Selling.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- Navigation -->
     <nav class="nv">
-        <div class="logo"><a href="#"><img src="logo3.png" alt="Logo"></a></div>
+        <div class="logo"><a href="#"><img src="Images/photo_6253284470023111456_y-removebg-preview.png" alt="Logo"></a></div>
         <div class="nav-links">
             <ul>
-                <li><a href="ResourceHive.html">HOME</a></li>
-                <li><a href="ResourceHive.html">ABOUT US</a></li>
-                <li><a href="Selling.html">SELLING</a></li>
-                <li><a href="Buying.html">BUYING</a></li>
-                <li><a href="Rental.html">RENTAL</a></li>
+                <li><a href="index.html">HOME</a></li>
+                <li><a href="index.html">ABOUT US</a></li>
+                <li><a href="selling.html">SELL</a></li>
+                <li><a href="Buying.html">BUY</a></li>
+                <li><a href="Rental.html">RENT</a></li>
             </ul>
         </div>
     </nav>
