making colour changes

--- a/Selling.html
+++ b/Selling.html
@@ -14,9 +14,9 @@
             <ul>
                 <li><a href="index.html">HOME</a></li>
                 <li><a href="index.html">ABOUT US</a></li>
-                <li><a href="Selling.html">SELLING</a></li>
-                <li><a href="Buying.html">BUYING</a></li>
-                <li><a href="Rental.html">RENTAL</a></li>
+                <li><a href="Selling.html">SELL</a></li>
+                <li><a href="Buying.html">BUY</a></li>
+                <li><a href="Rental.html">RENT</a></li>
             </ul>
         </div>
     </nav>
