making it more beautiful

--- a/Buying.html
+++ b/Buying.html
@@ -26,7 +26,7 @@
       </nav>        
         <!-- Header Section -->
         <div class="head">
-            <p>Deals of the day!!</p>
+            <p id="title">Deals of the day!!</p>
             <br>
             <p>Buy before someone else does</p>
         </div>
@@ -53,7 +53,7 @@
                 </div>
                 <div class="information">
                     <h2>Arduino UNO</h2>
-                    <p>Seller - Aditya Kumar Singh</p>
+                    <p>Seller - Raghav Arora</p>
                     <p>150.00 INR</p>
                     <p class="info">Phone number: 123X XXX XXX</p>
                     <p class="info">"Arduino UNO R3 Development Board - Great Condition + Accessories"</p>
@@ -68,7 +68,7 @@
                 </div>
                 <div class="information">
                     <h2>Digital Electronics by Anand Kumar</h2>
-                    <p>Seller - Aditya Kumar Singh</p>
+                    <p>Seller - Harsh Singh</p>
                     <p>400.00 INR</p>
                     <p class="info">Phone number: 123X XXX XXX</p>
                     <p class="info">"Digital Electronics by Anand Kumar - Excellent Condition"</p>
@@ -83,7 +83,7 @@
                 </div>
                 <div class="information">
                     <h2>OnePlus Buds 2</h2>
-                    <p>Seller - Aditya Kumar Singh</p>
+                    <p>Seller - Satyam Pandey</p>
                     <p>1200.00 INR</p>
                     <p class="info">Phone number: 123X XXX XXX</p>
                     <p class="info">"OnePlus Buds 2 - Wireless Earbuds with ANC, Excellent Condition"</p>
