--- a/Selling.html
+++ b/Selling.html
@@ -22,7 +22,7 @@
     </nav>
 
     <!-- Heading Section -->
-    <div>
+    <div class="data">
         <div class="heading">What are you <em><span class="selling">selling</span></em> today?</div>
     </div>
 
