--- a/Rental.html
+++ b/Rental.html
@@ -26,9 +26,9 @@
       </nav>        
         <!-- Header Section -->
         <div class="head">
-            <p>Deals of the day!!</p>
+            <p id="head">Get Amazing Items at Amazing Rates!!</p>
             <br>
-            <p>Rent before someone else does</p>
+            <p id="head2">Rent before someone else does</p>
         </div>
         
         <!-- Items Section -->
@@ -39,7 +39,7 @@
                 </div>
                 <div class="information">
                   <h2>Scientific Calculator</h2>
-                  <p>Seller - Aditya Kumar Singh</p>
+                  <p>Seller - Kashyap Tiwari</p>
                   <p>Rs. 20/DAY</p>
                   <p class="info">Phone number: 645X XXX XXX</p>
                   <p class="info">"Casio FX-991EX Advanced Scientific Calculator - Like New Condition"</p>
@@ -53,7 +53,7 @@
                 </div>
                 <div class="information">
                     <h2>Arduino UNO</h2>
-                    <p>Seller - Aditya Kumar Singh</p>
+                    <p>Seller - Saharsh Singh</p>
                     <p>Rs. 10/DAY</p>
                     <p class="info">Phone number: 123X XXX XXX</p>
                     <p class="info">"Arduino UNO R3 Development Board - Great Condition + Accessories"</p>
@@ -68,7 +68,7 @@
                 </div>
                 <div class="information">
                     <h2>Digital Electronics by Anand Kumar</h2>
-                    <p>Seller - Aditya Kumar Singh</p>
+                    <p>Seller - Neha Mishra</p>
                     <p>Rs. 15/DAY</p>
                     <p class="info">Phone number: 123X XXX XXX</p>
                     <p class="info">"Digital Electronics by Anand Kumar - Excellent Condition"</p>
@@ -83,7 +83,7 @@
                 </div>
                 <div class="information">
                     <h2>OnePlus Buds 2</h2>
-                    <p>Seller - Aditya Kumar Singh</p>
+                    <p>Seller - Partish Singh</p>
                     <p>Rs. 50/DAY</p>
                     <p class="info">Phone number: 123X XXX XXX</p>
                     <p class="info">"OnePlus Buds 2 - Wireless Earbuds with ANC, Excellent Condition"</p>
