--- a/Selling.html
+++ b/Selling.html
@@ -57,7 +57,7 @@
                 <label for="product-image">Product Image</label>
                 <input type="file" id="product-image" accept="image/*" required>
             </div>
-            <button type="submit" class="submit-btn">Sell It</button>
+            <button type="submit" class="submit-btn" style="font-size: 1.5rem;">Sell It</button>
         </form>
     </div>
 
